framec/tests/snapshots/python_snapshots__actions.snap
---
source: framec/tests/python_snapshots.rs
expression: "compile_fixture(\"10_actions\", \"python_3\")"
---
from typing import Any, Optional, List, Dict, Callable

class ActionsFrameEvent:
    def __init__(self, message: str, parameters):
        self._message = message
        self._parameters = parameters


class ActionsFrameContext:
    def __init__(self, event: ActionsFrameEvent, default_return):
        self.event = event
        self._return = default_return
        self._data = {}
        self._transitioned = False


class ActionsCompartment:
    def __init__(self, state: str, parent_compartment = None):
        self.state = state
        self.state_args = []
        self.state_vars = {}
        self.enter_args = []
        self.exit_args = []
        self.forward_event = None
        self.parent_compartment = parent_compartment

    def copy(self) -> 'ActionsCompartment':
        c = ActionsCompartment(self.state, self.parent_compartment)
        c.state_args = self.state_args.copy()
        c.state_vars = self.state_vars.copy()
        c.enter_args = self.enter_args.copy()
        c.exit_args = self.exit_args.copy()
        c.forward_event = self.forward_event
        return c


class Actions:
    def __init__(self):
        self._state_stack = []
        self._context_stack = []
        self.total = 0
        self.__compartment = self.__prepareEnter("Counting", [], [])
        self.__next_compartment = None

    @classmethod
    def _create(cls):
        c = cls()
        __e = ActionsFrameEvent("$>", c.__compartment.enter_args)
        __ctx = ActionsFrameContext(__e, None)
        c._context_stack.append(__ctx)
        c.__kernel(__e)
        c._context_stack.pop()
        return c

    _HSM_CHAIN = {
        "Counting": ["Counting"],
    }
    def __prepareEnter(self, leaf, state_args, enter_args):
        comp = None
        for name in self._HSM_CHAIN[leaf]:
            new_comp = ActionsCompartment(name)
            new_comp.state_args = list(state_args)
            new_comp.enter_args = list(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        return comp

    def __prepareExit(self, exit_args):
        comp = self.__compartment
        while comp is not None:
            comp.exit_args = list(exit_args)
            comp = comp.parent_compartment

    def __kernel(self, __e):
        # Route event to current state
        self.__router(__e)
        # Drain any transitions queued by the handler
        while self.__next_compartment is not None:
            next_compartment = self.__next_compartment
            self.__next_compartment = None
            # Exit the current (leaf) state
            self.__router(ActionsFrameEvent("<$", self.__compartment.exit_args))
            # Switch to the new compartment
            self.__compartment = next_compartment
            if next_compartment.forward_event is None:
                # No forwarded event — synthesize a fresh $>
                self.__router(ActionsFrameEvent("$>", self.__compartment.enter_args))
            else:
                if next_compartment.forward_event._message == "$>":
                    # Forwarded event IS $> — dispatch directly so the
                    # destination's $> receives the caller's payload
                    self.__router(next_compartment.forward_event)
                else:
                    # Forwarded event is not $> — initialize the destination
                    # with a fresh $>, then dispatch the forward to it
                    self.__router(ActionsFrameEvent("$>", self.__compartment.enter_args))
                    self.__router(next_compartment.forward_event)
            next_compartment.forward_event = None
            # Mark all stacked contexts as transitioned
            for ctx in self._context_stack:
                ctx._transitioned = True

    def __router(self, __e):
        if self.__compartment.state == "Counting":
            self._state_Counting(__e, self.__compartment)

    def __transition(self, next_compartment):
        self.__next_compartment = next_compartment

    def increment(self, n: int):
        __e = ActionsFrameEvent("increment", [n])
        __ctx = ActionsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def get_total(self) -> int:
        __e = ActionsFrameEvent("get_total", [])
        __ctx = ActionsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        self.__kernel(__e)
        return self._context_stack.pop()._return

    def _state_Counting(self, __e, compartment):
        if __e._message == "get_total":
            self._s_Counting_hdl_user_get_total(__e, compartment)
            return
        if __e._message == "increment":
            self._s_Counting_hdl_user_increment(__e, compartment)
            return

    def _s_Counting_hdl_user_get_total(self, __e, compartment):
        self._context_stack[-1]._return = self.total

    def _s_Counting_hdl_user_increment(self, __e, compartment):
        n = __e._parameters[0]
        self._scale(n)

    def _scale(self, n: int):
        self.total = self.total + n * 2
